<resources>
    <string name="app_name">买买买</string>
    <string name="jump">跳过</string>
    <string name="loading">正在加载</string>
    <string name="loading_add">加载中</string>
    <string name="buy">购买</string>
    <string name="is_the_latest_version">已是最新版本</string>
    <string name="no_immediate_update">发现有新版本是否立即更新</string>
    <string name="prompt_message">提示</string>
    <string name="check_for_updates">检查更新</string>
    <string name="you_no_login">您没有登录，请登录后在操作</string>
    <string name="later_on">稍后再说</string>
    <string name="now_updates">马上升级</string>
    <string name="now_login">马上登录</string>
    <string name="down_state">正在下载：%s</string>
    <string name="download_over">下载完成</string>
    <string name="file_download_over">文件已下载完毕</string>
    <string name="download_title">正在下载%s</string>
    <string name="ready_download">准备下载</string>
    <string name="hint_remain_count">您还可以输入%s字</string>
    <string name="hint_max_length_msg">最多只能输入%s字</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_alert">提示信息</string>
    <string name="choice_picture_again">图片不够清晰，请重新选择图片</string>
    <string name="browse_works">浏览作品</string>
    <string name="choice_picture">选择图片</string>
    <string name="choice_picture4">选择4张图片</string>
    <string name="choice_picture16">选择16张图片</string>
    <string name="choice_picture55">选择55张图片</string>
    <string name="edit_picture">编辑图片</string>
    <string name="save">保存</string>
    <string name="complex_picture">更换图片不可重复</string>
    <string name="one_picture">可选一张</string>
    <string name="home_page">首页</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="now_register">立即注册</string>
    <string name="account">账户：</string>
    <string name="balance">余额：</string>
    <string name="wallet_add">钱包:</string>
    <string name="my_order">我的订单</string>
    <string name="home_page_add">首&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;页</string>
    <string name="my_works">我的作品</string>
    <string name="me_popularize">我的推广</string>
    <string name="popularize">推广</string>
    <string name="manage_address">地址管理</string>
    <string name="personal_setting">个人设置</string>
    <string name="setting">设置</string>
    <string name="about_me">关于我们</string>
    <string name="copy_promote_code">推广码已复制到剪切板</string>
    <string name="no_money">关于我们</string>
    <string name="disclaimer">免责声明</string>
    <string name="tip_double_click_exit">再次点击退出i定制</string>
    <string name="no_net">网络根本没连，赶紧检查</string>
    <string name="net_failure">网络请求失败！</string>
    <string name="goods_details">商品详情</string>
    <string name="all_choice">全选</string>
    <string name="now_submit_order">提交订单</string>
    <string name="now_buy">立即购买</string>
    <string name="go_see">去逛逛</string>
    <string name="rmb">¥</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_works">是否删除作品！</string>
    <string name="choice_works">亲，还没选择作品！</string>
    <string name="all_no_choice">全不选</string>
    <string name="me">我的</string>
    <string name="input_telephone_init">手机</string>
    <string name="input_code_init">验证码</string>
    <string name="send_code">获取验证码</string>
    <string name="password_init">密码</string>
    <string name="register_password_init">6&#8211;20位登录密码</string>
    <string name="read_and_agree">注册即表示并同意</string>
    <string name="have_account">已有账号？直接登录</string>
    <string name="agree_treaty">同意《用户协议》方可注册</string>
    <string name="treaty">用户协议</string>
    <string name="please_input_phone_null">请输入手机号码!</string>
    <string name="please_input_promote_code_null">请输入推荐码!</string>
    <string name="please_input_phone_again">手机号码格式错误，请从新输入!</string>
    <string name="please_input_code_null">请输入验证码!</string>
    <string name="please_input_password_null">请输入密码!</string>
    <string name="request_service_failure">请求服务失败</string>
    <string name="get_code_s">秒后重新获取</string>
    <string name="fast_register">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="other_login">其他登录方式</string>
    <string name="account_login">账号登录</string>
    <string name="login_ok">登录成功</string>
    <string name="register_ok">注册成功</string>
    <string name="input_new_password">新密码</string>
    <string name="reset_password">重置密码</string>
    <string name="logout">退出登录</string>
    <string name="submit_order">提交订单</string>
    <string name="logout_ok">退出登录成功</string>
    <string name="please_login_first">请先登录</string>
    <string name="goods_update">商品更新</string>
    <string name="help">帮助指引</string>
    <string name="app_update">检查更新</string>
    <string name="app_share">应用分享</string>
    <string name="suggestions">反馈建议</string>
    <string name="contact_us">联系我们</string>
    <string name="share_success"> 分享成功啦</string>
    <string name="share_error"> 分享失败啦</string>
    <string name="share_cancel"> 分享取消了</string>
    <string name="share_app_info">生活中，每一刻都值得我们用心经历；1分钟，定制一副属于自己的扑克牌。</string>
    <string name="goods_update_success">商品更新成功</string>
    <string name="add_receipt_address">新增收货地址</string>
    <string name="select_the_provinces">请选择省市区</string>
    <string name="consignee_add_b">收货人:&#160;&#160;&#160;&#160;</string>
    <string name="consignee_phone">手机号码:</string>
    <string name="consignee_area">所属区域:</string>
    <string name="consignee_detailed_area">详细地址:</string>
    <string name="consignee_postcode">邮政编码:</string>
    <string name="add_address">添加新地址</string>
    <string name="revise_address">修改地址</string>
    <string name="default_address_ed">已为默认</string>
    <string name="setting_default_address">设为默认</string>
    <string name="set_default_address_success">设置默认地址成功</string>
    <string name="delete_address_success">删除地址成功</string>
    <string name="please_input_name">请输入收货人!</string>
    <string name="please_input_phone">请输入收货人电话!</string>
    <string name="please_input_area">请选择区域!</string>
    <string name="please_input_detaile_area">请输入详细地址!</string>
    <string name="add_address_success">添加地址成功</string>
    <string name="save_success">保存图片成功!</string>
    <string name="back">返回</string>
    <string name="express">快递</string>
    <string name="in_all">共计 </string>
    <string name="jian">件&#160;&#160;</string>
    <string name="total">合计:</string>
    <string name="express_mode">配送方式</string>
    <string name="please_express_mode">请选择配送方式</string>
    <string name="input_remarks_init">订单备注（限45字）</string>
    <string name="no_address">没有地址信息，点击新添加</string>
    <string name="dialog_info_create_order">正在生成订单</string>
    <string name="you_place_an_order">你已经下单，不要从复下单哦</string>
    <string name="free_shipping">免邮</string>
    <string name="buy_num">购买数量</string>
    <string name="system_maintenance">机器维护中，暂停接单…</string>
    <string name="back_last_page">返回上一页</string>
    <string name="do_pay_mun">需付款</string>
    <string name="al_pay">支付宝</string>
    <string name="union_pay_card">银联卡</string>
    <string name="wechat_pay">微信</string>
    <string name="order_pay">订单支付</string>
    <string name="ok_pay">确定支付</string>
    <string name="congratulations">恭喜您</string>
    <string name="order_payment_success">订单支付成功</string>
    <string name="consignee">收货人:</string>
    <string name="phone_num_add">手机号：</string>
    <string name="shipping_address">收货地址:</string>
    <string name="consignee_add">收货人 :&#160;&#160;&#160;&#160;</string>
    <string name="shipping_address_add">收货地址 :</string>
    <string name="see_order_details">查看订单</string>
    <string name="goto_home">返回首页 </string>
    <string name="pay_success">支付成功</string>
    <string name="share_works_info">生活中，每一刻都值得我们用心经历；1分钟，定制一副属于自己的扑克牌。</string>
    <string name="cancel_order">取消订单</string>
    <string name="payment">付款</string>
    <string name="shipping_add">运费 :</string>
    <string name="discount_add">优惠</string>
    <string name="goods_money_add">商品金额 :</string>
    <string name="real_payment_add">实付款 :</string>
    <string name="order_state_add">订单状态 :</string>
    <string name="order_id_add">订单编号 :</string>
    <string name="order_details">订单详情</string>
    <string name="order_time_add">下单时间 :</string>
    <string name="cancelled">已作废</string>
    <string name="paymented">已支付</string>
    <string name="no_pay">待支付</string>
    <string name="no_way_change">本次操作将无法撤销，确定要取消订单？</string>
    <string name="cancel_order_ok">成功取消订单</string>
    <string name="now_custom_made">立即定制</string>
    <string name="temporary_no_data">暂时没有数据</string>
    <string name="choice_plan">选择定制方案</string>
    <string name="please_choose_plan">请选方案</string>
    <string name="no_more">没有更多</string>
    <string name="num">数量：</string>
    <string name="pay_failure">支付失败</string>
    <string name="no_address_info">当前暂无地址信息~</string>
    <string name="no_works_info">当前暂无作品信息~</string>
    <string name="no_order_info">当前暂无订单信息~</string>
    <string name="no_popularize_order_info">当前暂无推广订单信息~</string>
    <string name="pay_mode_add">支付方式:</string>
    <string name="pay_money_add">订单金额:</string>
    <string name="custom_made">立即定制</string>
    <string name="yuan">元</string>
    <string name="add">+</string>
    <string name="get_works_id_ok">创建作品成功</string>
    <string name="load_msg">呃,页面加载失败</string>
    <string name="load_retry">重试</string>
    <string name="no_data">暂无数据</string>
    <string name="order_submit_success">订单已提交，去支付咯~</string>
    <string name="order_id_num">订单号：</string>
    <string name="order_id_num_e">订单号:</string>
    <string name="my_diy">我要定制</string>
    <string name="order_add_address">+新建地址</string>
    <string name="go_pay">去支付</string>
    <string name="add_total">，合计:</string>
    <string name="save_works_failure">作品保存失败</string>
    <string name="dialog_info_save_works">正在保存作品</string>
    <string name="do_you_want_to_quit_browse">是否退出浏览?</string>
    <string name="save_works">保存作品</string>
    <string name="dialog_info_create_works">正在创建作品</string>
    <string name="works_pic_incomplete">作品图片保存失败</string>
    <string name="dialog_info_login">正在登录</string>
    <string name="dialog_info_register">正在注册</string>
    <string name="send_code_ok">验证码发送成功</string>
    <string name="pic_choice_ok">选好了哦！</string>
    <string name="zhang">张</string>
    <string name="mini_choice">至少选</string>
    <string name="reset_password_ok">重置密码成功</string>
    <string name="pay_wait">支付结果确认中</string>
    <string name="wechat_inpaysupported">没有微信或者微信版本不支持支付功能</string>
    <string name="server_failure">服务器请求错误</string>
    <string name="json_error">初始化Json错误</string>
    <string name="network_name_add">当前网络名称：</string>
    <string name="mini_one">亲，数量至少为1哦~</string>
    <string name="you_are_not_the_promotion_of_people">您还不是推广人？</string>
    <string name="becoming_a_promoter">成为推广人</string>
    <string name="you_applyed_promoter_wait">您已申请推广人，请耐心等待</string>
    <string name="promotion_code_and_place_an_order">您已经申请成功,下单即可成推广人</string>
    <string name="choice_goods_and_place_an_order">挑选商品，立即下单</string>
    <string name="me_promotion_code_is">我的推广码:</string>
    <string name="my_gains">我的收益</string>
    <string name="zero">0</string>
    <string name="zero_yuan">0.00元</string>
    <string name="exist_promo_code">我有推荐码</string>
    <string name="no_promo_code">没有推荐码</string>
    <string name="now_apply">立即申请</string>
    <string name="submit_apply">提交申请</string>
    <string name="reviewed_ok">审核通过</string>
    <string name="apply_promoter">成为推广人</string>
    <string name="input_promo_code_init">输入推荐码</string>
    <string name="colligate">综合</string>
    <string name="sales_volume">销量</string>
    <string name="price">价格</string>
    <string name="filter">筛选</string>
    <string name="send_mode">配送方式</string>
    <string name="brand">品牌</string>
    <string name="classify">分类</string>
    <string name="kept">保存状态</string>
    <string name="goto_statement">去结算</string>
    <string name="remove_concern">移除关注</string>
    <string name="share">分享</string>
</resources>