<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_null"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/prompt_image"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/works_null" />

    <TextView
        android:id="@+id/prompt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prompt_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/pay_color_black"
        android:text="@string/no_works_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prompt_info"
        android:gravity="center"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/null_left_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/my_diy"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/goto_home_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_btn_bg"
            android:layout_marginLeft="14dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/goto_home"
            android:textColor="@color/pay_color_black"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>