<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nettactic.mall.activity.SearchResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_rl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/calendar_selected_day_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:padding="8dp"
                    android:src="@mipmap/title_back" />

                <TextView
                    android:id="@+id/search_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/semi_round_backgroud"
                    android:drawableLeft="@drawable/icon_search"
                    android:padding="10dp"
                    android:text="@string/about_me"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/change_iv"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="9dp"
                    android:src="@mipmap/good_type_linear" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/colligate_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/colligate"
                        android:textColor="@color/text_color_gray_j"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/sales_volume_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sales_volume"
                        android:textColor="@color/text_color_gray_j"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/price_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textColor="@color/text_color_gray_j"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/filter_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/filter"
                        android:textColor="@color/text_color_gray_j"
                        android:textSize="16sp" />
                </LinearLayout>

                <include layout="@layout/view_s_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/first_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/send_mode"
                        android:textColor="@color/text_color_gray_j"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/second_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/brand"
                        android:textColor="@color/text_color_gray_j"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/third_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/classify"
                        android:textColor="@color/text_color_gray_j"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/fourth_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/kept"
                        android:textColor="@color/text_color_gray_j"
                        android:textSize="14sp" />
                </LinearLayout>

                <include layout="@layout/view_s_line" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:background="@color/white" />

        </LinearLayout>

        <ImageView
            android:id="@+id/stick_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="25dp"
            android:src="@mipmap/icon_stick"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/right_rlayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:tag="right" />
</android.support.v4.widget.DrawerLayout>