<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/in_title"
            layout="@layout/view_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/exist_promo_code"
                        style="@style/RadioButtonTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingBottom="20dp"
                        android:paddingLeft="7dp"
                        android:paddingTop="20dp"
                        android:text="@string/exist_promo_code"
                        android:textColor="@color/pay_color_black" />

                    <RadioButton
                        android:id="@+id/no_promo_code"
                        style="@style/RadioButtonTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="7dp"
                        android:paddingTop="20dp"
                        android:text="@string/no_promo_code"
                        android:textColor="@color/pay_color_black" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/main_color"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/step01"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/submit_apply"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:gravity="center"
                        android:scaleType="fitXY"
                        android:src="@mipmap/big_arrow" />

                    <TextView
                        android:id="@+id/step02"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/reviewed_ok"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:gravity="center"
                        android:scaleType="fitXY"
                        android:src="@mipmap/big_arrow" />

                    <TextView
                        android:id="@+id/step03"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1.3"
                        android:gravity="center"
                        android:text="@string/apply_promoter"
                        android:textColor="@color/white" />
                </LinearLayout>

                <EditText
                    android:id="@+id/promo_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/dark_btn_bg"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/input_promo_code_init"
                    android:inputType="text"
                    android:maxLength="11"
                    android:paddingLeft="10dp"
                    android:paddingRight="35dp"
                    android:singleLine="true"
                    android:textColor="@color/pay_color_black"
                    android:textColorHint="@color/main_text_dark"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/me_yellow"
                    android:text="@string/now_apply"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/view_wait_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <include layout="@layout/view_wait_for_audit" >
        </include>
    </RelativeLayout>

</RelativeLayout>