<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <include layout="@layout/view_s_line" />

        <LinearLayout
            android:id="@+id/choice_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:paddingLeft="@dimen/main_margin"
            android:paddingRight="@dimen/main_margin">

            <ImageView
                android:id="@+id/all_choice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:src="@mipmap/checkbox_normal" />

            <TextView
                android:id="@+id/checkbox_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/all_choice"
                android:textColor="@color/text_color_gray_c"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="@color/text_color_gray_c"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="¥20.00元"
                android:textColor="@color/text_color_gray_c"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/goto_statement"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:gravity="center"
        android:paddingLeft="@dimen/main_margin"
        android:paddingRight="@dimen/main_margin"
        android:text="@string/goto_statement"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>